<resources>
    <string name="app_name">Smart City</string>
    <string name="menu_notes">Notes</string>
    <string name="create_new_note">Create</string>
    <string name="view_notes">View notes</string>
    <string name="add_note">Add Note</string>
    <string name="welcome">Welcome!</string>
    <string name="button_save">Save</string>
    <string name="hint_note">Write your note here…</string>
    <string name="empty_not_saved">Note not saved because it is empty.</string>
    <string name="edit_note">Edit Note</string>
    <string name="delete_note">Delete Note</string>
    <string name="delete_all">Delete all</string>
    <string name="deleting_all_data">Deleting all data</string>
    <string name="signup">Sign up</string>
    <string name="user_name">Name</string>
    <string name="user_address">Address</string>
    <string name="user_account_login">Already have an Account? Click to Login</string>
    <string name="user_login">Login</string>
    <string name="password_lenght">Password needs to be at least 6 character long</string>
    <string name="email_empty">E-mail is required</string>
    <string name="email_valid">Enter a valid e-mail</string>
    <string name="password_empty">Password is required</string>
    <string name="response_failure">Something went wrong with the database</string>
    <string name="title_activity_maps">Map</string>
    <string name="preference_file" translatable="false">isUserLoggedIn</string>
    <string name="loggedin" translatable="false">true</string>
    <string name="normal_map">Normal map</string>
    <string name="hybrid_map">Hybrid map</string>
    <string name="satellite_map">Satellite map</string>
    <string name="terrain_map">Terrain map</string>
    <string name="lat_long_snippet" translatable="false">Lat: %1$.5f, Long: %2$.5f</string>
    <string name="dropped_pin">Dropped Pin</string>
    <string name="poi" translatable="false">poi</string>
    <string name="logout">Logout</string>
    <string name="whereami">Where am I?</string>
    <string name="addMarker">Add marker</string>
    <string name="userID" translatable="false">0</string>
    <string name="markerDeleted">Marker deleted</string>
    <string name="markerNotFromUser">This marker is not yours!</string>
    <string name="deleteMarker">Delete a marker</string>
    <string name="selectMarkerToDelete">Press on a marker to delete it</string>
    <string name="markerNotDeleted">Something went wrong with deleting</string>
    <string name="textTipo">Type:</string>
    <string name="textCoords">Coords:</string>
    <string name="textDescr">Description:</string>

    <string-array name="Tipos">
        <item>Acidente rodoviário</item>
        <item>Obras</item>
        <item>Perigo</item>
    </string-array>
    <string name="emptyTextView">Nothing to show</string>
    <string name="markerSaved">Marker saved</string>
    <string name="markerNotSaved">Marker not Saved</string>
    <string name="markerDescHint">Describe the problem</string>
    <string name="captureImage">Capture</string>
    <string name="distance">Insert the distance in km</string>
    <string name="hint_filter" translatable="false">Acidente Rodoviário / Obras / Perigo</string>
    <string name="filterType">Filter by type</string>
    <string name="filterDistance">Filter by distance</string>
    <string name="resetFilter">Reset filter</string>
</resources>