<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/addMarker"
        android:title="@string/addMarker"
        android:icon="@drawable/addmarker"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/deleteMarker"
        android:title="@string/deleteMarker"
        android:icon="@drawable/removemarker"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/mapnotes"
        android:title="@string/view_notes"/>
    <item
        android:title="@string/filterDistance"
        android:id="@+id/mapDistanceFilter"/>
    <item
        android:title="@string/filterType"
        android:id="@+id/mapTypeFilter"/>
    <item
        android:id="@+id/resetFilter"
        android:title="@string/resetFilter" />
    <item
        android:id="@+id/logout"
        android:title="@string/logout"/>
</menu>